Fix todo list: do not hide the symbol (X) in the mobile version #1 #1 -symbol (X) to remove a task from the to-do list, always visible in the mobile version -increased the click area for the symbol (X)
Исправить список дел: не скрывать символ (Х) в мобильной версии #1
#1
-символ (X) для удаления задачи из списка дел, всегда видимый в мобильной версии
-увеличена область клика для символа (Х)

--- a/src/css/media.css
+++ b/src/css/media.css
@@ -55,3 +55,21 @@
     flex-direction: column;
   }
 }
+
+@media (max-width: 767px) {
+
+  .output-task__list-item-block1,
+  .output-task__list-item-block2 {
+    margin-left: 10px;
+  }
+
+  .output-task__list-item-block2-remove {
+    display: block;
+    padding: 6px 10px;
+    font-weight: 900;
+  }
+
+  .output-task__list-item-block1-checkbox[type=checkbox] {
+    margin: 5px 10px;
+  }
+}
